Actualiza las alusiones a Twitter por alusiones a X

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -237,10 +237,11 @@
 
           <p>
             Mientras voy trabajando estos datos he ido compartiéndolos en
-            <a href="http://twiiter.com/JaimeObregon">mi cuenta de Twitter</a>,
-            haciéndome eco de las dificultades y triunfos que he ido encontrando
-            en el camino y escuchando las reacciones. Así me llega que en mayo
-            de 2023 otro grupo político del Parlamento Vasco
+            <a href="http://twiiter.com/JaimeObregon"
+              >mi cuenta de X (antes, Twitter)</a
+            >, haciéndome eco de las dificultades y triunfos que he ido
+            encontrando en el camino y escuchando las reacciones. Así me llega
+            que en mayo de 2023 otro grupo político del Parlamento Vasco
             <a
               href="https://www.legebiltzarra.eus/ic2/restAPI/pvgune_descargar/default/df6f909b-2fe6-493e-b3ce-23b0892657ba"
               >solicita nuevamente al Gobierno Vasco</a
@@ -272,7 +273,7 @@
             porque estoy trabajando en otros proyectos similares a este en su
             objetivo y que también quiero hacer públicos. Para ponernos en
             marcha, creo que lo más eficaz es que me dirijas un mensaje público
-            o privado vía Twitter, donde soy
+            o privado vía la red social X, donde soy
             <a href="https://twitter.com/jaimeobregon">@JaimeObregon</a>. Los
             mensajes privados largos se me amontonan y muchas veces se me quedan
             sin contestar, por eso es más práctico que me escribas en abierto. A
@@ -325,14 +326,15 @@
               href="https://es.wikipedia.org/wiki/Jaime_G%C3%B3mez-Obreg%C3%B3n"
               >esta entrada en Wikipedia</a
             >, a
-            <a href="https://twitter.com/jaimeobregon">mi cuenta de Twitter</a>,
-            a <a href="https://jaime.gomezobregon.com">mi sitio web</a> o a mis
-            otros proyectos
+            <a href="https://twitter.com/jaimeobregon"
+              >mi cuenta de X (antes, Twitter)</a
+            >, a <a href="https://jaime.gomezobregon.com">mi sitio web</a> o a
+            mis otros proyectos
             <a href="https://contratosdecantabria.es"
               ><cite>contratosdecantabria.es</cite></a
             >, <a href="https://ladonacion.es"><cite>La donación</cite></a
             >, <a href="https://retrogipuzkoa.com"><cite>Retrogipuzkoa</cite></a
-            >… O, simplemente, en tu buscador favorito de internet. 🙃
+            >… O, simplemente, en tu buscador favorito de la web. 🙃
           </p>
 
           <p>
@@ -429,7 +431,7 @@
           <p>
             Como ves, ni siquiera he podido obtener todas en el mismo idioma. Si
             tú puedes pasarme las de años anteriores o estas mismas pero en el
-            idioma que me falta, por favor contáctame vía Twitter en
+            idioma que me falta, por favor contáctame vía la red social X en
             <a href="https://twitter.com/jaimeobregon">@JaimeObregon</a> y las
             incorporo al proyecto. 😃
           </p>
@@ -539,8 +541,8 @@
             los datos en cualquier medio o formato y remezclarlos transformarlos
             y construir a partir de ellos para cualquier propósito, incluso
             comercialmente. Pero debes citar que los datos han sido obtenidos y
-            estructurados por Jaime Gómez-Obregón y enlazar a mi cuenta de
-            Twitter:
+            estructurados por Jaime Gómez-Obregón y enlazar a mi cuenta de X
+            (antes, Twitter):
             <a href="https://twitter.com/jaimeobregon">@JaimeObregon</a>.
           </p>
         </div>
@@ -690,7 +692,7 @@
           </p>
 
           <p>
-            Así que, en principio no preveo evolucionar esta herramienta mucho
+            Así que, en principio, no preveo evolucionar esta herramienta mucho
             más allá de lo que estás viendo, con la salvedad de la posible
             corrección de defectos (<i>bugfixing</i>).
           </p>
@@ -759,7 +761,7 @@
           <p>
             En otro caso, escríbemete un mensaje abierto a
             <a href="https://twitter.com/jaimeobregon">@JaimeObregon</a> a
-            través de Twitter.
+            través de la red social X.
           </p>
         </div>
       </x-details>
