Carga la memoria de 2024

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -59,9 +59,9 @@
 
       <h2>
         <p>
-          Un análisis de <span id="counter">1674</span> campañas de publicidad y
+          Un análisis de <span id="counter">1991</span> campañas de publicidad y
           comunicación&nbsp;institucional en el período
-          2018&NoBreak;-&NoBreak;2023
+          2018&NoBreak;-&NoBreak;2024
         </p>
       </h2>
 
@@ -363,7 +363,7 @@
             Todos los datos que aquí puedes explorar proceden de las memorias
             oficiales de publicidad institucional que el Gobierno Vasco remite
             al Parlamento Vasco, correspondientes a las anualidades entre 2019 y
-            2023, ambas inclusive.
+            2024, ambas inclusive.
           </p>
 
           <p>
@@ -418,6 +418,14 @@
                 ><cite
                   >Memoria de Publicidad y Comunicación Institucional del
                   Gobierno Vasco. Año 2023.</cite
+                ></a
+              >
+            </li>
+            <li>
+              <a href="/documentos/memorias/2024.pdf"
+                ><cite
+                  >Memoria de Publicidad y Comunicación Institucional del
+                  Gobierno Vasco. Año 2024.</cite
                 ></a
               >
             </li>
