Cambia enlaces twitter.com → x.com

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -67,7 +67,7 @@
 
       <p>
         Por
-        <a href="https://twitter.com/JaimeObregon"
+        <a href="https://x.com/JaimeObregon"
           >Jaime&nbsp;Gómez&NoBreak;-&NoBreak;Obregón</a
         >
       </p>
@@ -125,25 +125,20 @@
             pero esto se lleva a cabo de una forma muy ineficiente: en el
             inadecuado formato mencionado, solo una vez al año, con un desfase
             de unos cuatro meses… ¡y
-            <a
-              href="https://twitter.com/JaimeObregon/status/1656082411443175430"
+            <a href="https://x.com/JaimeObregon/status/1656082411443175430"
               >con</a
             >
-            <a
-              href="https://twitter.com/JaimeObregon/status/1655173725627596801"
+            <a href="https://x.com/JaimeObregon/status/1655173725627596801"
               >numerosos</a
             >
-            <a
-              href="https://twitter.com/JaimeObregon/status/1655617166182428673"
+            <a href="https://x.com/JaimeObregon/status/1655617166182428673"
               >errores</a
             >
             de
-            <a
-              href="https://twitter.com/JaimeObregon/status/1657895174071042050"
+            <a href="https://x.com/JaimeObregon/status/1657895174071042050"
               >todo</a
             >
-            <a
-              href="https://twitter.com/JaimeObregon/status/1656215497493590016"
+            <a href="https://x.com/JaimeObregon/status/1656215497493590016"
               >tipo</a
             >!
           </p>
@@ -194,10 +189,8 @@
 
           <p>
             Así, y que yo conozca, los periodistas
-            <a href="https://twitter.com/axierL">Axier López</a> y
-            <a href="https://twitter.com/larbelaitz"
-              >Lander Arbelaitz Mitxelena</a
-            >
+            <a href="https://x.com/axierL">Axier López</a> y
+            <a href="https://x.com/larbelaitz">Lander Arbelaitz Mitxelena</a>
             trabajaron paciente y manualmente los datos de 2017 y en diciembre
             de 2018 publicaron
             <a
@@ -210,8 +203,7 @@
           <p>
             En el plano institucional, he podido saber que el parlamentario
             vasco Josu Estarrona
-            <a
-              href="https://twitter.com/Josu_Estarrona/status/1579417369658945538"
+            <a href="https://x.com/Josu_Estarrona/status/1579417369658945538"
               >requirió en el otoño de 2022 al Gobierno Vasco</a
             >
             estos datos en un formato abierto (<i>open data</i>).
@@ -220,8 +212,7 @@
           <p>
             Mi idea de procesar informáticamente estas memorias surge en junio
             de 2022,
-            <a
-              href="https://twitter.com/JaimeObregon/status/1539364161003593729"
+            <a href="https://x.com/JaimeObregon/status/1539364161003593729"
               >tras una charla con periodistas de Hekimen</a
             >, la asociación de medios de comunicación en euskera. Tras echarle
             un vistazo decidí darlo por imposible, pero en septiembre volví
@@ -269,9 +260,9 @@
             objetivo y que también quiero hacer públicos. Para ponernos en
             marcha, creo que lo más eficaz es que me dirijas un mensaje público
             o privado vía la red social X, donde soy
-            <a href="https://twitter.com/jaimeobregon">@JaimeObregon</a>. Los
-            mensajes privados largos se me amontonan y muchas veces se me quedan
-            sin contestar, por eso es más práctico que me escribas en abierto. A
+            <a href="https://x.com/jaimeobregon">@JaimeObregon</a>. Los mensajes
+            privados largos se me amontonan y muchas veces se me quedan sin
+            contestar, por eso es más práctico que me escribas en abierto. A
             partir de ahí quizá podamos contactar por teléfono e intentaré
             ayudarte.
           </p>
@@ -321,7 +312,7 @@
               href="https://es.wikipedia.org/wiki/Jaime_G%C3%B3mez-Obreg%C3%B3n"
               >esta entrada en Wikipedia</a
             >, a
-            <a href="https://twitter.com/jaimeobregon"
+            <a href="https://x.com/jaimeobregon"
               >mi cuenta de X (antes, Twitter)</a
             >, a <a href="https://jaime.gomezobregon.com">mi sitio web</a> o a
             mis otros proyectos
@@ -435,7 +426,7 @@
             Como ves, ni siquiera he podido obtener todas en el mismo idioma. Si
             tú puedes pasarme las de años anteriores o estas mismas pero en el
             idioma que me falta, por favor contáctame vía la red social X en
-            <a href="https://twitter.com/jaimeobregon">@JaimeObregon</a> y las
+            <a href="https://x.com/jaimeobregon">@JaimeObregon</a> y las
             incorporo al proyecto. 😃
           </p>
         </div>
@@ -449,24 +440,19 @@
           <p>
             Aparentemente el Gobierno Vasco elabora los informes con un
             procesador de texto y luego los exporta al formato PDF. He
-            <a
-              href="https://twitter.com/JaimeObregon/status/1655617166182428673"
+            <a href="https://x.com/JaimeObregon/status/1655617166182428673"
               >encontrado</a
             >
-            <a
-              href="https://twitter.com/JaimeObregon/status/1656082411443175430"
+            <a href="https://x.com/JaimeObregon/status/1656082411443175430"
               >numerosos</a
             >
-            <a
-              href="https://twitter.com/JaimeObregon/status/1655173725627596801"
+            <a href="https://x.com/JaimeObregon/status/1655173725627596801"
               >errores</a
             >
-            <a
-              href="https://twitter.com/JaimeObregon/status/1657895174071042050"
+            <a href="https://x.com/JaimeObregon/status/1657895174071042050"
               >de todo</a
             >
-            <a
-              href="https://twitter.com/JaimeObregon/status/1656215497493590016"
+            <a href="https://x.com/JaimeObregon/status/1656215497493590016"
               >tipo</a
             >
             que parecen dar a entender que las tablas y sumas de las memorias
@@ -546,7 +532,7 @@
             comercialmente. Pero debes citar que los datos han sido obtenidos y
             estructurados por Jaime Gómez-Obregón y enlazar a mi cuenta de X
             (antes, Twitter):
-            <a href="https://twitter.com/jaimeobregon">@JaimeObregon</a>.
+            <a href="https://x.com/jaimeobregon">@JaimeObregon</a>.
           </p>
         </div>
       </x-details>
@@ -763,8 +749,8 @@
 
           <p>
             En otro caso, escríbemete un mensaje abierto a
-            <a href="https://twitter.com/jaimeobregon">@JaimeObregon</a> a
-            través de la red social X.
+            <a href="https://x.com/jaimeobregon">@JaimeObregon</a> a través de
+            la red social X.
           </p>
         </div>
       </x-details>
